--- a/test-output/old/CRM Basics/Settings.properties
+++ b/test-output/old/CRM Basics/Settings.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Login][SuiteResult context=ActivityReport][SuiteResult context=Settings]
+[SuiteResult context=Login][SuiteResult context=Settings][SuiteResult context=ActivityReport]
